// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`expandable > renders correctly opened 1`] = `
<DocumentFragment>
  .emotion-0 {
  height: auto;
}

.emotion-0[data-is-animated="true"] {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      data-is-animated="false"
    >
      Sample Expandable
    </div>
  </div>
</DocumentFragment>
`;

exports[`expandable > renders correctly with animationDuration 1`] = `
<DocumentFragment>
  .emotion-0 {
  height: auto;
}

.emotion-0[data-is-animated="true"] {
  -webkit-transition: max-height 500ms ease-out,opacity 500ms ease-out;
  transition: max-height 500ms ease-out,opacity 500ms ease-out;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      data-is-animated="false"
      style="max-height: 0px; overflow: hidden;"
    >
      Sample Expandable
    </div>
  </div>
</DocumentFragment>
`;

exports[`expandable > renders correctly with animationDuration set to 0 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      style="display: none;"
    >
      Sample Expandable
    </div>
  </div>
</DocumentFragment>
`;

exports[`expandable > renders correctly with className 1`] = `
<DocumentFragment>
  .emotion-0 {
  height: auto;
}

.emotion-0[data-is-animated="true"] {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
}

<div
    data-testid="testing"
  >
    <div
      class="test emotion-0 emotion-1"
      data-is-animated="false"
      style="max-height: 0px; overflow: hidden;"
    >
      Sample Expandable
    </div>
  </div>
</DocumentFragment>
`;

exports[`expandable > renders correctly with default values 1`] = `
<DocumentFragment>
  .emotion-0 {
  height: auto;
}

.emotion-0[data-is-animated="true"] {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      data-is-animated="false"
      style="max-height: 0px; overflow: hidden;"
    >
      Sample Expandable
    </div>
  </div>
</DocumentFragment>
`;

exports[`expandable > renders correctly with minHeight 1`] = `
<DocumentFragment>
  .emotion-0 {
  height: auto;
}

.emotion-0[data-is-animated="true"] {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      data-is-animated="false"
      style="max-height: 5px; overflow: hidden;"
    >
      Sample Expandable
    </div>
  </div>
</DocumentFragment>
`;
